--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,40 +14,36 @@ categories = ["web-programming", "api-bindings", "asynchronous", "cryptography",
 publish = ["acmex"]
 
 [dependencies]
-
-async-trait = "0.1.88"
-axum = "0.8.4"
-base64 = "0.22.1"
-chrono = "0.4.41"
+async-trait = { version = "0.1.88" }
+axum = { version = "0.8.4" }
+base64 = { version = "0.22.1" }
+chrono = { version = "0.4.41" }
 clap = { version = "4.5.38", features = ["derive"] }
-hickory-resolver = "0.25.2"
-
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
-prometheus = "0.14.0"
-
-url = "2.5.4"
-
-
-
-
-
-reqwest = { version = "0.12.15", features = ["json"] }
+hickory-resolver = { version = "0.25.2" }
+pem = { version = "3.0.5" }
+prometheus = { version = "0.14.0" }
+reqwest = { version = "0.12.15", features = ["json", "charset", "http2", "macos-system-configuration", "rustls-tls", "hickory-dns", "gzip"] }
+rcgen = { version = "0.13.2" }
+ring = { version = "0.17.14" }
+rustls = { version = "0.23.27" }
+rustls-pki-types = "1.12.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
-ring = "0.17.14"
-rustls = "0.23.27"
+thiserror = { version = "2.0.12" }
 tokio = { version = "1.45.0", features = ["full"] }
-tokio-cron-scheduler = "0.14.0"
-x509-parser = "0.16.0"
+tokio-cron-scheduler = { version = "0.14.0" }
+tracing = { version = "0.1.41" }
+tracing-subscriber = { version = "0.3.19" }
+x509-parser = { version = "0.17.0" }
+
 
 [dependencies.redis]
-version = "0.27.6"
-features = ["tokio-comp"]
+version = "0.31.0"
+features = ["tokio-comp", "cache-aio", "connection-manager"]
 optional = true
 
 [features]
-default = []
+default = ["redis"]
 redis = ["dep:redis"]
 google-ca = []
 zerossl-ca = []
