--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ documentation = "https://docs.rs/acmex"
 keywords = ["acme", "tls", "certificate", "https"]
 readme = "README.md"
 categories = ["web-programming", "api-bindings", "asynchronous", "cryptography", "network-programming"]
+rust-version = "1.93.0"
 
 [dependencies]
 async-trait = { version = "0.1.89" }
@@ -21,7 +22,7 @@ clap = { version = "4.5.57", features = ["derive"] }
 hickory-resolver = { version = "0.25.2" }
 pem = { version = "3.0.6" }
 prometheus = { version = "0.14.0" }
-reqwest = { version = "0.12.28", features = ["json", "charset", "http2", "macos-system-configuration", "rustls-tls", "hickory-dns", "gzip"] }
+reqwest = { version = "0.13.2", features = ["json", "charset", "http2", "system-proxy", "rustls", "hickory-dns", "gzip", "query", "form", "blocking", "http3"], default-features = false }
 rcgen = { version = "0.14.7" }
 ring = { version = "0.17.14" }
 rustls = { version = "0.23.36" }
