--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "acmex"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2024"
 rust-version = "1.92.0"
 description = "A comprehensive ACME v2 client for obtaining TLS certificates"
@@ -19,12 +19,16 @@ axum = { version = "0.8", features = ["macros"] }
 base64 = "0.22"
 clap = { version = "4.5", features = ["derive"] }
 jiff = { version = "0.2.19", features = ["serde"] }
-hickory-resolver = "0.25"
+hex = "0.4"
+hickory-resolver = { version = "0.25", features = ["serde"] }
+hmac = "0.12"
 pem = "3.0"
 prometheus = "0.14"
 rand = "0.10.0-rc.9"
 rcgen = { version = "0.14", features = ["crypto", "aws_lc_rs", "pem"], default-features = false }
+regex = "1.12"
 reqwest = { version = "0.13", features = ["json", "rustls", "http2", "gzip"] }
+rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
 rustls-pemfile = "2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -32,8 +36,10 @@ sha2 = "0.11.0-rc.5"
 thiserror = "2.0"
 toml = "0.9.11"
 tokio = { version = "1.49", features = ["full"] }
+tokio-rustls = "0.26"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+urlencoding = "2.1"
 x509-parser = "0.18"
 
 # 加密后端 - 优先使用 aws-lc-rs
@@ -72,6 +78,11 @@ dns-cloudflare = []
 dns-route53 = []
 dns-digitalocean = []
 dns-linode = []
+dns-azure = []
+dns-google = []
+dns-alibaba = []
+dns-godaddy = []
+dns-tencent = []
 
 metrics = []
 cli = []
@@ -81,4 +92,4 @@ tempfile = "3.8"
 tokio-test = "0.4"
 mockito = "1.4"
 hex = "0.4.3"
-
+temp-env = "0.3"
