--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ clap = { version = "4.5", features = ["derive"] }
 jiff = { version = "0.2.19", features = ["serde"] }
 hex = "0.4"
 hickory-resolver = { version = "0.25", features = ["serde"] }
-hmac = "0.12"
+hmac = { version = "0.13.0-rc.5" }
 pem = "3.0"
 prometheus = "0.14"
 rand = "0.10.0-rc.9"
@@ -39,6 +39,9 @@ tokio = { version = "1.49", features = ["full"] }
 tokio-rustls = "0.26"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+tracing-opentelemetry = "0.31"
+opentelemetry = { version = "0.31", features = ["trace"] }
+opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
 urlencoding = "2.1"
 x509-parser = "0.18"
 
@@ -83,6 +86,8 @@ dns-google = []
 dns-alibaba = []
 dns-godaddy = []
 dns-tencent = []
+dns-huawei = []
+dns-cloudns = []
 
 metrics = []
 cli = []
