--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,6 @@ rcgen = { version = "0.14", features = ["crypto", "aws_lc_rs", "pem"], default-f
 regex = "1.12"
 reqwest = { version = "0.13", features = ["json", "gzip", "query", "form", "blocking"] }
 rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
-rustls-pemfile = "2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha1 = "0.11.0-rc.5"
@@ -40,14 +39,14 @@ tokio = { version = "1.49", features = ["full"] }
 tokio-rustls = "0.26"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
-tracing-opentelemetry = "0.31"
-opentelemetry = { version = "0.30", features = ["trace"] }
-opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
-opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
+tracing-opentelemetry = "0.32"
+opentelemetry = { version = "0.31", features = ["trace"] }
+opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
 urlencoding = "2.1"
 x509-parser = "0.18"
 
-# 加密后端 - 优先使用 aws-lc-rs
+# Crypto Backends - aws-lc-rs is preferred
 [dependencies.aws-lc-rs]
 version = "1.15.4"
 optional = true
@@ -56,10 +55,6 @@ features = ["fips"]
 [dependencies.ring]
 version = "0.17"
 optional = true
-
-# DNS 解析
-[dependencies.hickory-proto]
-version = "0.25"
 
 # AWS SDK for Route53
 [dependencies.aws-config]
@@ -70,11 +65,7 @@ optional = true
 version = "1.106"
 optional = true
 
-# HTTP 服务器
-[dependencies.hyper]
-version = "1.8"
-
-# Redis 可选支持
+# Optional Redis support
 [dependencies.redis]
 version = "1.0.3"
 features = ["tokio-comp", "connection-manager", "aio"]
@@ -104,9 +95,6 @@ metrics = []
 cli = []
 
 [dev-dependencies]
-tempfile = "3.8"
-tokio-test = "0.4"
-mockito = "1.4"
+mockito = "1.7"
 hex = "0.4.3"
-temp-env = "0.3"
 tower = { version = "0.5", features = ["util"] }
