--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ tokio-rustls = "0.26"
 # Serialization & Configuration
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-toml = "0.9.12"
+toml = "1.0.1+spec-1.1.0"
 
 # Observability & Metrics
 tracing = "0.1"
@@ -54,7 +54,7 @@ hickory-resolver = { version = "0.25", features = ["serde"] }
 
 # Utilities
 clap = { version = "4.5", features = ["derive"] }
-jiff = { version = "0.2.19", features = ["serde"] }
+jiff = { version = "0.2.20", features = ["serde"] }
 rand = "0.10.0"
 regex = "1.12"
 
@@ -69,7 +69,7 @@ ring = { version = "0.17", optional = true }
 
 # AWS Route53 Support
 aws-config = { version = "1.8", optional = true }
-aws-sdk-route53 = { version = "1.106", optional = true }
+aws-sdk-route53 = { version = "1.107", optional = true }
 
 # Storage Backends
 redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager", "aio"], optional = true }
